# Virtual-Stylist

./: .env.example  .env.production.example  .gitignore  README.md  package.json  pnpm-lock.yaml
docs/: ARCHITECTURE.md  (+4 more)
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/versions/: 20260515_0001_initial.py  20260516_1612_add_gap_findings.py  20260517_0001_add_tryon.py  20260517_0002_add_style_axis.py  20260517_0003_add_messages.py  20260517_0004_add_affiliate.py  20260517_0005_attributes.py  20260517_0006_rls.py  20260517_0007_multiangle.py  20260517_0008_gender.py
services/api/app/: config.py  db.py  main.py
services/api/app/core/: auth.py  json_types.py  rate_limit.py  storage.py
services/api/app/models/: __init__.py  affiliate.py  base.py  conversations.py  family.py  gaps.py  outfits.py  tryons.py  users.py  wardrobe.py
services/api/app/schemas/: affiliate.py  common.py  family.py  gaps.py  refine.py  stylist.py  tryon.py  users.py  wardrobe.py
services/api/app/services/: affiliate.py  gap_analysis.py  ingest_worker.py  model_gateway.py  outfit_compositor.py  preflight.py  stylist_engine.py  tryon_worker.py  weather.py
services/api/scripts/: benchmark_bg_removal.py  retag_closet.py  seed.py  seed_100_closet.py  seed_demo_closet.py  smoke_sam2.py  smoke_tryon.py  verify_auth0.py
services/api/tests/: conftest.py  test_auth.py  test_eval_harness.py  test_gap_analysis.py  test_health.py  test_production_gateway.py  test_production_safety.py  test_stub_gateway.py
services/api/tests/integration/: conftest.py  test_wardrobe_flow.py
(+56 files in other folders)
